--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-    </application>
+      
+ <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyB5g56ERmN1SzavTzWLWaWFStqVeapmjFk"/>
+  
+   <!-- You will also only need to add this uses-libray tag -->
+   <uses-library android:name="org.apache.http.legacy" android:required="false"/>
 
-</manifest>
+    </application>
+    </manifest>
