--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^0.19.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-animatable": "^1.3.3",
     "react-native-datepicker": "^1.7.2",
+    "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-maps": "0.27.1",
@@ -26,6 +28,7 @@
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.13",
+    "react-native-share": "^3.3.2",
     "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
