--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "^1.7.0",
