--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^5.0.7",
     "@react-navigation/stack": "^5.0.9",
     "axios": "^0.19.2",
+    "native-base": "^2.13.12",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-animatable": "^1.3.3",
