--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-image-pan-zoom": "^2.1.12",
+    "react-native-image-picker": "^2.3.1",
     "react-native-image-slider-box": "^1.0.12",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "0.27.1",
