--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,8 @@ target 'MyNewProject1' do
 
   pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   target 'MyNewProject1Tests' do
     inherit! :search_paths
     # Pods for testing
